# Katas

./: .gitignore  README.md
CSharp/GreetingKata/Greeting.Tests/: Greeting.Tests.csproj
Elixir/fizz_buzz/lib/: fizz_buzz.ex
Elixir/roman_numeral/: README.md
Elixir/roman_numeral/lib/: roman_numeral.ex
GreetingKata/GreetingLib/: GreetMessages.cs  Greeting.cs
Python/: README.md
Python/Kata2/tests/: program_test.py
cpp/: CMakeLists.txt  README.md
cpp/AutomorphicNumber/src/: automorphic.h
cpp/StringCalculator/: CMakeLists.txt  README.md
cpp/StringCalculator/src/: CMakeLists.txt  calculator.cpp  calculator.h
cpp/StringCalculator/tests/: CMakeLists.txt  CMakeLists.txt.in  calculator-test.cpp
cpp/TennisKata/: CMakeLists.txt  README.md
cpp/TennisKata/src/: CMakeLists.txt  player.cpp  player.h  tennis-kata.cpp  tennis-kata.h
cpp/TennisKata/tests/: CMakeLists.txt  CMakeLists.txt.in  tennis-test.cpp
cpp/src/: automorphic.cpp
cpp/tests/: AutomorphicNumberKata-test.cpp  CMakeLists.txt
csharp/: README.md
csharp/GreetingKata/Greeting.Tests/: GreetingTest.cs
csharp/GreetingKata/GreetingLib/: IGreetMessage.cs
csharp/MiddleString/: MiddleString.sln  README.md
csharp/MiddleString/MiddleString/: Implementation.cs
csharp/MiddleString/MiddleString.Tests/: MiddleString.Tests.csproj  Tests.cs
csharp/SortCsvColumns/: README.md  SortCsvColumns.sln
csharp/SortCsvColumns/SortCsvColumns/: Implementation.cs
csharp/SortCsvColumns/SortCsvColumns.Tests/: SortCsvColumns.Tests.csproj  Tests.cs
csharp/SortNumbersByWeight/: README.md  SortNumbersByWeight.sln
csharp/SortNumbersByWeight/SortNumbersByWeight/: Implementation.cs
csharp/SortNumbersByWeight/SortNumbersByWeight.Tests/: SortNumbersByWeight.Tests.csproj  Tests.cs
csharp/SumOfMultiples/: README.md  SumOfMultiples.sln
csharp/SumOfMultiples/SumOfMultiples/: Implementation.cs
csharp/SumOfMultiples/SumOfMultiples.Tests/: SumOfMultiples.Tests.csproj  Tests.cs
elixir/: REAME.md
elixir/fizz_buzz/: README.md
elixir/fizz_buzz/test/: fizz_buzz_test.exs
elixir/roman_numeral/: README.md
elixir/roman_numeral/test/: roman_numeral_test.exs
python/FizzBuzz/src/: fizzbuzz.py
python/FizzBuzz/tests/: fizzbuzz_test.py
python/Kata2/src/: program.py
